--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
             srcset="">
         <p class="lead">Eu sou yguin_</p>
         <h1>Eu estudo programaçao</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
+        <p>Sou estudante do Euclides Da Cunha,estudo programaçao e computaçao,amo mexer com tecnologia,      
+            !</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
